--- a/src/css/index.css
+++ b/src/css/index.css
@@ -214,6 +214,7 @@
     display: block;
   }
   div.box-1{
+    width: 100%;
     height: 640px;;
     border-radius: 20px;
     background-image:url('/Poze/pagina.png');
